# sudoku-tools

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  tasks.py
docs/: README.md  documentation.md  index.html
docs/documentation/: index.html
documentation/: index.html
reference/sudoku/: index.html
reference/sudoku/examples/: index.html
reference/sudoku/examples/boards/: index.html
reference/sudoku/examples/rate/: index.html
reference/sudoku/examples/shuffle/: index.html
reference/sudoku/examples/solve/: index.html
reference/sudoku/puzzle/: index.html
reference/sudoku/solvers/: index.html
reference/sudoku/solvers/solver/: index.html
reference/sudoku/solvers/strategy_solver/: index.html
reference/sudoku/strategies/: index.html
reference/sudoku/strategies/hidden_subset/: index.html
reference/sudoku/strategies/naked_subset/: index.html
reference/sudoku/strategies/refresh_candidates/: index.html
reference/sudoku/strategies/strategy/: index.html
search/: search_index.json
sudoku/: board.py  puzzle.py  strategies.py  types.py
sudoku/examples/: rate.py  shuffle.py  solve.py
sudoku/test/: test_board.py  test_puzzle.py
test/: test_board.py  test_puzzle.py  test_solve.py
